# python-md24de

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
src/md24de/: __init__.py  _auth.py  _client.py  _exceptions.py  _http_trace.py  _models.py  _notices.py  _parser.py  _pdf.py  _pdf_check.py  _serialization.py
tests/: conftest.py  test_auth.py  test_client.py  test_http_trace.py  test_init.py  test_models.py  test_notices.py  test_parser.py  test_pdf.py  test_pdf_check.py  test_serialization.py
tests/fixtures/: consumption.html
