[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-md24de"
version = "0.1.0"
description = "Unofficial Python client library for the messdienst24.de portal"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Volker Schmidt" }]
keywords = ["md24de", "messdienst24", "energy", "consumption", "utility", "heating"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "json5>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pyright>=1.1",
    "ruff>=0.9",
    "types-beautifulsoup4>=4.12",
    "pip-licenses>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/md24de"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "C4", "PIE", "RET", "SIM"]
ignore = [
    "S101",   # Use of assert (needed in tests)
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/md24de"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
